--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="stylesheets/tailwind.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
     <!-- Custom styling -->
     <style>
       body {
@@ -27,39 +30,75 @@
           <!-- Image -->
           <div class="p-5 border rounded border-gray-300 m-5">
             <div class="h-96 w-full">
-              <img src="images/1.jpg" id="art" class="w-full rounded h-full object-cover" alt="" />
+              <img
+                src="images/1.jpg"
+                id="art"
+                class="w-full rounded h-full object-cover"
+                alt=""
+              />
             </div>
             <h3 id="art-name" class="text-4xl font-bold mt-4">Happy</h3>
           </div>
           <!-- Options -->
           <div class="mt-10 max-w-lg mx-auto">
             <span id="desc" class="text-lg text-gray-700"
-              >Happy hails from the Middle English word hap, meaning "good luck." Many of the early European words for happy actually referred to good
-              luck, rather than a feeling of joy.
+              >Happy hails from the Middle English word hap, meaning "good
+              luck." Many of the early European words for happy actually
+              referred to good luck, rather than a feeling of joy.
             </span>
-            <div class="text-2xl font-medium pb-2"><span id="art-price">150</span>$</div>
-            <div class="pt-10">
-              <button class="p-5 border border-gray-200 shadow hover:shadow-lg rounded" id="normal">Normal Shipping - 10$</button>
-              <button id="express" class="p-5 border border-gray-200 shadow hover:shadow-lg rounded">Express Shipping - 30$</button>
+            <div class="text-2xl font-medium pb-2">
+              <span id="art-price">150</span>$
             </div>
-            <div class="flex justify-between items-center mt-20">
-              <div class="p-5 my-2 border cursor-pointer hover:border-purple-600 hover:shadow-lg rounded" id="first">
+            <div class="pt-2">
+              <button
+                class="p-2 border border-gray-200 shadow hover:shadow-lg rounded"
+                id="normal"
+              >
+                Normal Shipping - 10$
+              </button>
+              <button
+                id="express"
+                class="p-2 border border-gray-200 shadow hover:shadow-lg rounded"
+              >
+                Express Shipping - 30$
+              </button>
+            </div>
+            <div class="flex justify-between items-center mt-3">
+              <div
+                class="p-3 my-2 border cursor-pointer hover:border-purple-600 hover:shadow-lg rounded"
+                id="first"
+              >
                 <img src="images/1.jpg" class="w-20 h-20" alt="" />
               </div>
-              <div class="p-5 my-2 border cursor-pointer hover:border-purple-600 rounded" id="second">
+              <div
+                class="p-3 my-2 border cursor-pointer hover:border-purple-600 rounded"
+                id="second"
+              >
                 <img src="images/2.jpg" class="w-20 h-20" alt="" />
               </div>
-              <div class="p-5 my-2 border cursor-pointer hover:border-purple-600 rounded" id="third">
+              <div
+                class="p-3 my-2 border cursor-pointer hover:border-purple-600 rounded"
+                id="third"
+              >
                 <img src="images/3.jpg" class="w-20 h-20" alt="" />
               </div>
-              <div class="p-5 my-2 border cursor-pointer hover:border-purple-600 rounded" id="fourth">
+              <div
+                class="p-3 my-2 border cursor-pointer hover:border-purple-600 rounded"
+                id="fourth"
+              >
                 <img src="images/4.jpg" class="w-20 h-20" alt="" />
               </div>
             </div>
 
-            <div class="text-2xl py-2">Shipping Charge: <span id="shipping">10</span>$</div>
+            <div class="text-2xl py-2">
+              Shipping Charge: <span id="shipping">10</span>$
+            </div>
             <div class="text-2xl py-2">Total: <span id="total">160</span>$</div>
-            <button class="px-4 py-2 text-xl border border-purple-200 mt-6 shadow rounded hover:shadow-xl">Buy Now</button>
+            <button
+              class="px-4 py-2 text-xl border border-purple-200 mt-3 shadow rounded hover:shadow-xl"
+            >
+              Buy Now
+            </button>
           </div>
         </div>
       </div>
