tailwind style change

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <body>
     <main>
       <div class="container mx-auto px-4 md:px-2">
+        <h3 class="text-5xl font-bold text-center text-green-400 my-1">
+          Images canvas
+        </h3>
         <div class="grid grid-cols-2">
           <!-- Image -->
           <div class="p-5 border rounded border-gray-300 m-5">
